--- a/index.html
+++ b/index.html
@@ -1,1 +1,302 @@
-Hello Word
+
+<!DOCTYPE html>
+<html>
+
+<head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+	<title>Resume</title>
+	<style type="text/css">
+		body {
+			margin: 0 auto;
+			background-color: black;
+			color: white;
+
+		}
+
+		.first {
+
+			background-color: rgb(107, 92, 236);
+			padding: 1px;
+			color: white;
+
+		}
+
+		h1 {
+			text-align: center;
+			font-weight: bold;
+			text-transform: uppercase;
+
+		}
+
+		h2 {
+			text-align: center;
+		}
+
+		img {
+			float: right;
+			width: 110px;
+			margin-right: 15px;
+		}
+
+		ul,
+		p {
+			font-size: 20px;
+			margin-left: 200px;
+			margin-right: 200px;
+		}
+
+		.second {
+			line-height: 2;
+		}
+
+		.Third {
+			line-height: 2;
+			margin-left: 0px;
+			margin-right: 0px;
+		}
+
+		.four {
+			line-height: 2;
+
+		}
+		
+		.fa {
+				padding: 15px;
+				font-size: 25px;
+				width: 30px;
+				text-align: center;
+				text-decoration: none;
+				margin: 5px 2px;
+				border-radius: 50%;
+			
+			}
+
+			.fa:hover {
+				opacity: 0.7;
+			}
+
+			.fa-facebook {
+				background: #3B5998;
+				color: white;
+			}
+
+			.fa-youtube {
+				background: #bb0000;
+				color: white;
+			}
+
+			.fa-instagram {
+				background: #fc4949be;
+				color: white;
+			}
+
+			.fa-github {
+				background-color: white;
+				color: black;
+				margin-left: 550px
+			}
+
+			.fa-linkedin {
+				background: #007bb5;
+				color: white;
+			}
+
+
+		@media screen and (max-width: 600px) {
+			body {
+				margin: 0 auto;
+				background-color: white;
+				color: black;
+				width: 100%;
+				font-size: 12px;
+
+			}
+
+			.first {
+
+				background-color: rgb(107, 92, 236);
+				padding: 1px;
+				color: white;
+
+			}
+
+			h1 {
+				text-align: center;
+				font-weight: bold;
+				text-transform: uppercase;
+
+			}
+
+			h2,
+			p {
+				text-align: left;
+				font-size: 12px;
+				margin-left: 15px;
+				margin-right: 15px;
+			}
+
+			img {
+				float: right;
+				width: 50px;
+				position: relative;
+				right: 10px;
+			}
+
+			ul,
+			p {
+				font-size: 12px;
+			}
+
+			.second {
+				margin-left: 0px;
+				line-height: 1.6;
+				font-size: 12px;
+				margin-right: 0px;
+
+			}
+
+			.Third {
+				line-height: 1.6;
+				margin-left: 0px;
+				margin-right: 0px;
+				font-size: 12px;
+			}
+
+			.four {
+				line-height: 1.6;
+				font-size: 12px;
+				margin-left: 0px;
+				margin-right: 0px;
+			}
+
+			.fa {
+				padding: 20px;
+				font-size: 20px;
+				width: 32px;
+				text-align: center;
+				text-decoration: none;
+				margin: 5px 2px;
+				border-radius: 50%;
+			}
+
+			.fa:hover {
+				opacity: 0.7;
+			}
+
+			.fa-facebook {
+				background: #3B5998;
+				color: white;
+			}
+
+			.fa-youtube {
+				background: #bb0000;
+				color: white;
+			}
+
+			.fa-instagram {
+				background: #125688;
+				color: white;
+			}
+
+			.fa-github {
+				background-color: rgb(17, 4, 4);
+				color: rgb(247, 242, 242);
+				
+				
+			}
+
+			.fa-linkedin {
+				background: #007bb5;
+				color: white;
+			}
+
+
+
+		}
+	</style>
+</head>
+
+<body>
+	<div class="first">
+		<h1>Resume</h1>
+		<hr>
+		<img src="download.png">
+		<h2>Name - Ravendra Kumar</h2>
+		<h2>Email - kumarravendra055@gmail.com</h2>
+		<h2>Mobile No. - 8052988047</h2>
+		<hr>
+	</div>
+	<div class="second">
+		<h1>Education</h1>
+		<hr>
+
+		<p>➢ Passed <b>MCA</b> at AKS University Satna M.P. with...<b style="float: right;">80
+				Percent.</b> </p>
+		<p>➢ Passed <b>B.Sc[CS]</b> at AKS University Satna M.P. with...<b style="float: right;">73
+				Percent.</b>
+		</p>
+		<p>➢ Passed <b>12th</b> at S.P.G.V.Chitrakoot Satna M.P. with...<b style="float: right;">73
+				Percent.</b></p>
+		<p>➢ Passed <b>10th</b> at S.P.G.V.Chitrakoot Satna M.P.with...<b style="float: right;">81
+				Percent.</b></p>
+
+	</div>
+	<div class="Third">
+		<h1>Technical Skils</h1>
+		<hr>
+
+		<p>➢ Development - HTML, CSS, jsp, servlet, hibernate, MySQL etc.</p>
+		<p>➢ Language – Java etc.</p>
+		<p>➢ IDE – Eclipse,STS etc.</p>
+		<p>➢ Editor – VS Code, Notepad, Notepad++, Sublime etc.</p>
+
+	</div>
+	<div class="four">
+		<h1>Project</h1>
+		<hr>
+
+		<p><b>➢ Village development System</b> – This project is a website, in which we
+			can search many things link school,hospital,temple etc.</p>
+		<p><b>➢ Search Room for rent</b> – This is an Android app with the help of
+			which we can search rooms for rent.</p>
+
+	</div>
+	<div class="five">
+		<h1>Strength</h1>
+		<hr>
+		<p>➢ My Strength is Time Punctual, honest, Teamwork, Technical Skill
+			Etc.</p>
+		<h1>Hobby</h1>
+		<hr>
+		<p>➢ Learning , Playing Chess, etc.</p>
+
+	</div>
+	<div class="four">
+		<h1>PERSONAL DETAILS</h1>
+		<hr>
+		<p>➢ Name – Ravendra kumar</p>
+		<p>➢ Date of Birth – 31/07/1999</p>
+		<p>➢ Gender - Male</p>
+		<p>➢ Father’s Name – Mr. Anil kumar</p>
+		<p>➢ Mother’s Name – Mrs. Usha</p>
+		<p>➢ Language Known – Hindi & English</p>
+		<p>➢ Nationality - Indian</p>
+		<p>➢ Address – Vill.Puraina, Post Gauriya, District Lakhimpur-kheri
+			261501</p><hr>
+
+
+	</div>
+	<div>
+		<a href="https://github.com/r-ravendra08" target="blank" class="fa fa-github"></a>
+		<a href="https://www.linkedin.com/in/ravendra-kumar-077820185/" target="blank" class="fa fa-linkedin"></a>
+		<a href="https://www.facebook.com/kumar.ravendraa/" target="blank" class="fa fa-facebook">
+		</a><a href="https://www.youtube.com/channel/UCjMKOVfOnZcrINCPRIp-SJQ" target="blank" class="fa fa-youtube"></a>
+		<a href="https://www.instagram.com/kumar_ravendra7621/?hl=en" target="blank" class="fa fa-instagram"></a>
+	</div>
+
+
+</body>
+
+</html>
