--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
 		<a href="https://www.linkedin.com/in/ravendra-kumar-077820185/" target="blank" class="fa fa-linkedin"></a>
 		<a href="https://www.facebook.com/kumar.ravendraa/" target="blank" class="fa fa-facebook">
 		</a><a href="https://www.youtube.com/channel/UCjMKOVfOnZcrINCPRIp-SJQ" target="blank" class="fa fa-youtube"></a>
-		<a href="https://www.instagram.com/kumar_ravendra7621/?hl=en" target="blank" class="fa fa-instagram"></a>
+		<a href="https://www.instagram.com/r_ravendra08/" target="blank" class="fa fa-instagram"></a>
 	</div>
 
 
