--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
 		<a href="https://github.com/r-ravendra08" target="blank" class="fa fa-github"></a>
 		<a href="https://www.linkedin.com/in/ravendra-kumar-077820185/" target="blank" class="fa fa-linkedin"></a>
 		<a href="https://www.facebook.com/kumar.ravendraa/" target="blank" class="fa fa-facebook">
-		</a><a href="https://www.youtube.com/channel/UCjMKOVfOnZcrINCPRIp-SJQ" target="blank" class="fa fa-youtube"></a>
+		</a><a href="https://www.youtube.com/@rkvlogs8047" target="blank" class="fa fa-youtube"></a>
 		<a href="https://www.instagram.com/r_ravendra08/" target="blank" class="fa fa-instagram"></a>
 	</div>
 
